# simple-cpp-game

./: .clang-format  CMakeLists.txt  README.md  imgui.ini
assets/: depth.fs  depth.vs  phong.fs  phong.vs  phongInstanced.fs  phongInstanced.vs  phong_original.fs
assets/backpack/: License.txt
assets/materials/: NewMaterial.mat  default.mat
assets/models/cube/: cube.gltf
assets/models/ground/: ground.glb  ground.gltf  license.txt
assets/models/sponza/glTF/: Sponza.gltf
assets/models/tree/: scene.gltf
include/: stb_image.h
shader/: default.vs  depth-foliage.vs  depth.fs  depth.vs  depthCube.fs  depthCube.vs  foliage.fs  foliage.vs  phong.fs  phong.vs  postProcessing.fs  postProcessing.vs
src/: AABB.h  Application.cpp  Application.h  Buffer.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Engine.h  Event.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Gui.cpp  Gui.h  LearnOpenGLMesh.cpp  LearnOpenGLMesh.h  LearnopenglShader.h  Level.cpp  Level.h  Light.h  LightSceneNode.cpp  LightSceneNode.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshSceneNode.cpp  MeshSceneNode.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Player.cpp  Player.h  Profiler.cpp  Profiler.h  RenderPass.cpp  RenderPass.h  (+23 more)
src/assets/: Asset.cpp  Asset.h  AssetHelpers.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  MaterialSerializer.h  MeshLoader.cpp  MeshLoader.h  SceneSerializer.h
src/core/: Core.cpp  Core.h  Event.h  EventManager.cpp  EventManager.h  GPUTimer.h  Profiler.cpp  Profiler.h  Timer.h  UUID.h  Window.cpp  Window.h
src/debug/: DebugUI.cpp  DebugUI.h  Editor.cpp  Editor.h  FlySpectatorCtrl.cpp  FlySpectatorCtrl.h  ImGuiLayer.cpp  ImGuiLayer.h  PanelCamInfo.cpp  PanelCamInfo.h  PanelFrametime.cpp  PanelFrametime.h  PanelScene.cpp  PanelScene.h  PanelSceneHierarchy.cpp  PanelSceneHierarchy.h  PanelStats.cpp  PanelStats.h  PanelStatsHighlights.h  Player.cpp  Player.h  Shared.h
src/editor/: Editor.cpp  Editor.h  EditorState.h  FlySpectatorCtrl.cpp  FlySpectatorCtrl.h  ImGuiLayer.cpp  ImGuiLayer.h  MenuBar.h  PanelAssets.h  PanelComponents.h  PanelFrametime.h  PanelMaterial.h  PanelScene.h  PanelSceneHierarchy.h  PanelStats.h  Shared.h
src/helpers/: SmoothDamp.h
src/platform/: FileDialog.h
src/renderer/: Asset.h  Camera.h  ClearColor.h  DirectionalLight.h  ForwardPass.cpp  ForwardPass.h  Framebuffer.cpp  Framebuffer.h  GLDebug.h  LightSceneNode.cpp  LightSceneNode.h  LightingPass.cpp  LightingPass.h  Material.cpp  Material.h  MaterialManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PassIO.h  PointLight.h  PostProcessingPass.cpp  PostProcessingPass.h  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererTypes.h  Shader.cpp  Shader.h  ShaderManager.h  ShadowPass.cpp  ShadowPass.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  TextureManager.h
src/scene/: Components.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Sandbox.cpp  Sandbox.h  Scene.cpp  Scene.h
src/util/: ComputeEffectiveRange.h  FileDialog.h  MemoryUsage.h  SmoothDamp.h
